Replace -- with --- for Edge compatibility

--- a/hex.html
+++ b/hex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset=UTF-8>
 <title>C(he)ss - Hexagonal</title>
-<style>*{--:9vmin}</style>
+<style>*{---:9vmin}</style>
 <link rel=stylesheet href=hex.css>
 <input type=checkbox id=tilt checked>
 <label for=tilt>Tilt</label>
