--- a/rhombus.html
+++ b/rhombus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset=UTF-8>
 <title>C(he)ss - Rhombic</title>
-<style>*{--:9vmin}</style>
+<style>*{---:9vmin}</style>
 <link rel=stylesheet href=rhombus.css>
 <input type=checkbox id=tilt>
 <label for=tilt>Tilt</label>
